# trip-planner

backend/: .env  demo.py  pyproject.toml
backend/app/: config.py
backend/app/agents/: trip_planner_agent.py
backend/app/api/: main.py
backend/app/api/routes/: trip.py
backend/app/models/: schema.py  schemas.py
backend/app/services/: amap_service.py  llm_service.py  unsplash_service.py
